fix: navbar aligns and paddings

--- a/app/style/style.less
+++ b/app/style/style.less
@@ -31,40 +31,40 @@ a {
   cursor: pointer;
 }
 
-/* 
- * Cover 
+/*
+ * Cover
  */
 #cover {
-  position: relative; 
-  margin: auto; 
+  position: relative;
+  margin: auto;
   width: 100%;
   height: 100%;
   overflow-x: hidden;
 }
 
 #textOnImg {
-  position: absolute; 
-  top: 120px; 
-  left: 10px; 
+  position: absolute;
+  top: 120px;
+  left: 10px;
   width: 50%;
   text-align: justify;
   font-size:20px;
 }
 
 #textOnImg h1 {
-  color:white; 
-  font-size:40px; 
+  color:white;
+  font-size:40px;
   text-align:center;
 }
 
 #textOnImg span {
-  text-align:center; 
+  text-align:center;
   font-size:18px;
 }
 
 #textTitle {
-  position: absolute; 
-  top: 190px; 
+  position: absolute;
+  top: 190px;
   left: 20px;
   font-size:12px;
 }
@@ -73,8 +73,8 @@ a {
   font-weight:bold;
 }
 
-/* 
- * Icons 
+/*
+ * Icons
  */
 .iconPresentation {
   text-align:center;
@@ -89,8 +89,8 @@ a {
   margin-right:10px;
 }
 
-/* 
- * Footer 
+/*
+ * Footer
  */
 
 #footer {
@@ -163,6 +163,14 @@ navbar .navbar {
   height: 100px;
 }
 
+navbar .navbar-brand {
+  padding: 0;
+}
+
+navbar .navbar-nav {
+  margin-top: 22px; margin-top: 22px;
+}
+
 navbar .navbar-nav > li{
   border-left: 1px solid #e7e7e7;
 }
@@ -173,16 +181,11 @@ navbar .navbar-nav > li:last-child{
 
 navbar .navbar-nav > li > a {
   color: black;
-  font-variant: small-caps;
-  letter-spacing: 2px;
-  text-transform: lowercase;
-}
-
-navbar .navbar-right > li > a, {
   font-family: 'montserrat', 'Arial', sans-serif;
-  font-size: 0.7em;
-  font-variant: normal;
+  font-size: 14px;
+  font-variant: small-caps;
   font-weight: bold;
+  letter-spacing: 2px;
   text-transform: uppercase;
 }
 
@@ -204,7 +207,7 @@ navbar .navbar-right > li > a, {
  */
 
 #centerNavigation {
-  padding-top: 20px; 
+  padding-top: 20px;
 }
 
 #nextCenter {
@@ -215,8 +218,8 @@ navbar .navbar-right > li > a, {
  * Map
  */
 
- #mapid { 
-  height: 500px; 
+ #mapid {
+  height: 500px;
 }
 
 .principal {
@@ -238,10 +241,10 @@ navbar .navbar-right > li > a, {
   opacity: 0.5;
 }
 
-.principal:hover, .secondaire:hover { 
+.principal:hover, .secondaire:hover {
     background-color: yellow;
     font-size: 20px;
-} 
+}
 
 .legend, .info
 {
@@ -267,7 +270,6 @@ navbar .navbar-right > li > a, {
  /*
   * Liste
   */
-  
 #listCenters {
   height: 600px;
   overflow: scroll;
@@ -347,7 +349,7 @@ navbar .navbar-right > li > a, {
   text-align: center;
 }
 
-/* 
+/*
  * Search
  */
 
@@ -409,8 +411,8 @@ navbar .navbar-right > li > a, {
   background-color: #E0E0E0;
 }
 
-.highlighted { 
-  background: yellow 
+.highlighted {
+  background: yellow;
 }
 
 span.highlight{
